<resources>
    <string name="app_name">AgroTech</string>
    <string name="add_image">Add Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">Login</string>
    <string name="logintxt">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_accout">Don\'t have an account?</string>

</resources>