<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_24sdp"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".MainActivity"
    android:background="@color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:tint="@color/primary"
                android:backgroundTint="@color/primary"
                >


            </com.makeramen.roundedimageview.RoundedImageView>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_82sdp"
                android:layout_height="@dimen/_82sdp"
                android:src="@drawable/sign_up_img"
                android:layout_gravity="center"
                />

        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical"
            android:background="@drawable/ic_container_shape"
            android:padding="@dimen/_12sdp">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/ic_edit_text_shape"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/ic_edit_text_shape"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/ic_edit_text_shape"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:background="@drawable/ic_button_shape"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:backgroundTint="@color/button_color"
                android:textAllCaps="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/primary_text"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_gravity="center"
                android:textSize="@dimen/_18ssp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:textStyle="bold"
                android:textColor="@color/button_color"
                android:clickable="true"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_16ssp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_6sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/google_logo"
                android:clickable="true"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_26sdp"

                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:src="@drawable/facebooklogo"
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_26sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</ScrollView>